build general framework

--- a/src/content/config/blog.mdx
+++ b/src/content/config/blog.mdx
@@ -1,28 +1,24 @@
 ---
-title: Astronomical News & Stories
+title: Science News & Stories
 description: |
-  Astronomical News & Stories
+  Science News & Stories
 intro: |
-  Read about updates, documentation, features and fiction.
+  Read about protocols and documentation.
 per_page: 10
 hero_buttons: []
 blog_tags:
   - title: "Documentation "
-    description: read about how nebulala works
+    description: read about how to get set up and make your computer do things
     intro: Lets get technical
     thumbnail: /src/assets/cosmic_coffee_5.jpeg
     hero_buttons: []
     name: Docs
-  - title: Nebulix Features
-    description: What Nebulix can do
-    intro: what makes it move
+  - title: "Protocols"
+    description: How to perform molecular things in the wet lab
+    intro: How to get what you need
     thumbnail: /src/assets/cosmic-aperol-spritz.jpeg
-    name: Features
-  - title: Fiction
-    description: just to show of some of the features
-    intro: just to show of some of the features
-    thumbnail: /src/assets/nebulala_2.jpeg
-    name: Fiction
+    name: Protocols
+
 style:
   template: split
   hero_template: plain
