--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -1,13 +1,15 @@
 ---
 main_menu:
-  - label: Pricing
-    href: /pricing
+  - label: Research
+    href: /research
+  - label: Code
+    href: /work
+  - label: Publications
+    href: /pubs
   - label: Blog
     href: /blog
-  - label: Shop
-    href: /shop
-  - label: Work
-    href: /work
+  - label: CV
+    href: /resume
   - label: Contact
     href: "#contact"
 footer_menus:
@@ -15,18 +17,18 @@ footer_menus:
     links:
       - label: Home
         href: /
-      - label: About us
-        href: /about-nebulix
-      - label: Restaurant Menu Demo
-        href: /menu/drinks
+      - label: About me
+        href: /about-natasha
+      - label: Research
+        href: /menu/research
   - label: Documentation
     links:
-      - label: Docs
-        href: /blog/tag/docs
       - label: Blog
         href: /blog
-      - label: Pricing
-        href: /pricing
+      - label: Protocols
+        href: /blog/tag/protocols
+      - label: Publications
+        href: /pubs
 legal_menu:
   - label: Cookies
     href: "#"
