--- a/src/content/config/contact.mdx
+++ b/src/content/config/contact.mdx
@@ -1,18 +1,11 @@
 ---
-email: hello@unfolding.io
+email: natasha.picciani@gmail.com
 phone_label: 06 22222222
 phone_link: tel:+3460000000
 social:
   - icon: /src/icons/github.svg
     label: github
-    href: https://github.com/unfolding-io/nebulix
-    icons: null
-  - icon: /src/icons/instagram.svg
-    label: instagram
-    href: https://www.instagram.com/unfolding.io/
-  - icon: /src/icons/whatsapp.svg
-    label: Whatsapp
-    href: https://wa.me/34649712625
+    href: https://github.com/npicciani
     icons: null
 form:
   thumbnail: src/assets/cosmic_contact.jpg
@@ -35,8 +28,7 @@ form:
     - label: I am just testing this form
       slack_id: C01821PA5GA
   title: |
-    Talk to us
+    Talk to me
   intro: >
-    Great that you have questions! Please select a topic and tell us how we can
-    help you and we get back to you ASAP.
+    It's great that you want to connect! Please send me a message and I will be happy to reply.
 ---
