--- a/src/content/config/project.mdx
+++ b/src/content/config/project.mdx
@@ -1,12 +1,8 @@
 ---
-title: "My Cosmos Craftsmanship Collection "
+title: "My Collection of Open Source Tools and Workflows"
 description: asdadadsad
 intro: "\n\n\n"
 per_page: 10
-hero_buttons:
-  - icon_only: false
-    label: Read more
-    href: "#more"
 project_tags:
   - title: Intergalactic Systems
     description: Projects out of this world
